apps/home-assistant/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: home-assistant
  name: home-assistant
  namespace: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
        fsGroupChangePolicy: "OnRootMismatch"
        capabilities:
          add:
          - NET_ADMIN
          - NET_RAW
          - NET_BROADCAST
      volumes:
        - name: ha-storage
          persistentVolumeClaim:
            claimName: home-assistant-pvc
        - name: ha-config
          configMap:
            name: home-assistant-config
      containers:
        - name: home-assistant
          image: ghcr.io/home-assistant/home-assistant:stable
          resources: {}
          ports:
          - containerPort: 1900
            protocol: UDP
          - containerPort: 5353
            protocol: UDP
          - containerPort: 8123
          volumeMounts:
            - mountPath: /config
              name: ha-storage
            - mountPath: /config/configuration.yaml
              subPath: configuration.yaml
              name: ha-config
